feat: tentando resolver o erro

--- a/course-carousel.html
+++ b/course-carousel.html
@@ -126,12 +126,12 @@
                                         alt=""
                                       />
                                                                         <div class="demo-one__btns">
-                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>View Page</span>                                                                             </a><!-- /.thm-btn demo-one__btn -->
+                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>Ver documento</span>                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
                                                                     <div class="demo-one__content">
                                                                         <h3 class="demo-one__title">
-                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>View Page</span>                                                                             </a>
+                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>Ver documento</span>                                                                             </a>
                                                                         </h3><!-- /.demo-one__title -->
                                                                     </div><!-- /.demo-one__content -->
                                                                 </div><!-- /.demo-one__card -->
@@ -144,7 +144,7 @@
                                         alt=""
                                       />
                                                                         <div class="demo-one__btns">
-                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>View Page</span>                                                                             </a>!-- /.thm-btn demo-one__btn -->
+                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>Ver documento</span>                                                                             </a>!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
                                                                     <div class="demo-one__content">
@@ -162,7 +162,7 @@
                                         alt=""
                                       />
                                                                         <div class="demo-one__btns">
-                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>View Page</span>                                                                             </a><!-- /.thm-btn demo-one__btn -->
+                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>Ver documento</span>                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
                                                                     <div class="demo-one__content">
@@ -180,7 +180,7 @@
                                       />
                                                                         <div class="demo-one__btns">
                                                                             <a href="index-dark.html" class="drivschol-btn demo-one__btn">
-                                                                                <span>View Page</span>
+                                                                                <span>Ver documento</span>
                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
@@ -199,7 +199,7 @@
                                       />
                                                                         <div class="demo-one__btns">
                                                                             <a href="index-boxed.html" class="drivschol-btn demo-one__btn">
-                                                                                <span>View Page</span>
+                                                                                <span>Ver documento</span>
                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
@@ -219,7 +219,7 @@
                                       />
                                                                         <div class="demo-one__btns">
                                                                             <a href="index-rtl.html" class="drivschol-btn demo-one__btn">
-                                                                                <span>View Page</span>
+                                                                                <span>Ver documento</span>
                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
@@ -314,27 +314,27 @@
                         </ul>
                     </nav><!-- /.main-header__nav -->
                     <div class="main-header__right">
-                        <div class="info-item">
+                        <div class="info-item d-none">
                             <a href="tel:+8801775-338747" class="info-item__btn d-flex align-items-center">
                                 <div class="icon">
                                     <i class="icon-Call"></i>
                                 </div>
                                 <div class="content">
-                                    <span class="content__text">Call to Questions</span>
-                                    <h6 class="content__call">(303) 555-0105</h6>
+                                    <span class="content__text">Ligue para mais Info</span>
+                                    <h6 class="content__call">+244 922 223 010</h6>
                                 </div>
                             </a>
                         </div>
-                        <div class="info-item">
-                            <a href="#" class="search-toggler info-item__btn">
-                                <i class="icon-search"></i><span class="sr-only">Search</span>
+                        <div class="info-item d-none">
+                            <a href="#" class="search-toggler info-item__btn d-none">
+                                <i class="icon-search"></i><span class="sr-only">Pesquisar</span>
                             </a>
                         </div>
-                        <div class="info-item">
-                            <a href="cart.html" class="info-item__btn"><i class="icon-trolley-cart"></i></a>
+                        <div class="info-item d-none">
+                            <a href="cart.html" class="info-item__btn d-none"><i class="icon-trolley-cart"></i></a>
                         </div>
-                        <div class="item-shape">
-                            <img src="assets/images/shapes/shape.svg" alt="Drivschol">
+                        <div class="item-shape d-none">
+                            <img src="assets/images/shapes/shape.svg" alt="Drivschol" class="d-none">
                         </div>
                     </div><!-- /.main-header__right -->
                     <div class="mobile-nav__btn mobile-nav__toggler">
@@ -594,7 +594,7 @@
                             <div class="cta-one__thumb">
                                 <div class="cta-one__thumb__one wow fadeInUp" data-wow-delay="300ms">
                                     <div class="cta-one__thumb__one__thumb">
-                                        <img src="assets/images/shapes/cta-car.png" alt="drivschol">
+                                        <img src="assets/images/shapes/cta-car.png" alt="Drivschol" class="d-none">
                                     </div>
                                 </div><!-- /.cta-thumb-one -->
                             </div>
@@ -765,11 +765,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@drivschol.com">needhelp@drivschol.com</a>
+                     <a href="mailto:info@interclube.co.ao">info@interclube.co.ao</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:+244922223010">+244 922 223 010</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
