--- a/demo-landing.html
+++ b/demo-landing.html
@@ -35,7 +35,7 @@
             <div class="container">
                 <div class="hero-section__content">
                     <a href="index.html" class="hero-section__logo">
-                        <img src="assets/images/drivschol-landing/main-logo-1-1.png" width="204" height="47" alt="drivschol">
+                        <img src="assets/images/drivschol-landing/main-logo-1-1.png" width="204" height="47" alt="Drivschol" class="d-none">
                     </a>
                     <h1 class="hero-section__title">Creative.
                         Powerful. <br>
@@ -151,7 +151,7 @@
                                 <img width="370" height="431" src="assets/images/drivschol-landing/home-dark.jpg" alt="Home Boxed">
                                 <div class="demos-one__buttons">
                                     <a target="_blank" href="index-dark.html" class="drivschol-btn  drivschol-btn--base2 demo-one__btn">
-                                        <span>View Page</span>
+                                        <span>Ver documento</span>
                                     </a><!-- /.thm-btn demo-one__btn -->
                                 </div><!-- /.demos-one__buttons -->
                             </div><!-- /.demos-one__image -->
@@ -166,7 +166,7 @@
                                 <img width="370" height="431" src="assets/images/drivschol-landing/home-boxed.jpg" alt="Home Dark">
                                 <div class="demos-one__buttons">
                                     <a target="_blank" href="index-boxed.html" class="drivschol-btn  drivschol-btn--base2 demo-one__btn">
-                                        <span>View Page</span>
+                                        <span>Ver documento</span>
                                     </a><!-- /.thm-btn demo-one__btn -->
                                 </div><!-- /.demos-one__buttons -->
                             </div><!-- /.demos-one__image -->
@@ -181,7 +181,7 @@
                                 <img width="370" height="431" src="assets/images/drivschol-landing/home-rtl.jpg" alt="Home RTL">
                                 <div class="demos-one__buttons">
                                     <a target="_blank" href="index-rtl.html#googtrans(en%7car)" class="drivschol-btn  drivschol-btn--base2 demo-one__btn">
-                                        <span>View Page</span>
+                                        <span>Ver documento</span>
                                     </a><!-- /.thm-btn demo-one__btn -->
                                 </div><!-- /.demos-one__buttons -->
                             </div><!-- /.demos-one__image -->
