--- a/index-3.html
+++ b/index-3.html
@@ -123,12 +123,12 @@
                                         alt=""
                                       />
                                                                         <div class="demo-one__btns">
-                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>View Page</span>                                                                             </a><!-- /.thm-btn demo-one__btn -->
+                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>Ver documento</span>                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
                                                                     <div class="demo-one__content">
                                                                         <h3 class="demo-one__title">
-                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>View Page</span>                                                                             </a>
+                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>Ver documento</span>                                                                             </a>
                                                                         </h3><!-- /.demo-one__title -->
                                                                     </div><!-- /.demo-one__content -->
                                                                 </div><!-- /.demo-one__card -->
@@ -141,7 +141,7 @@
                                         alt=""
                                       />
                                                                         <div class="demo-one__btns">
-                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>View Page</span>                                                                             </a>!-- /.thm-btn demo-one__btn -->
+                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>Ver documento</span>                                                                             </a>!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
                                                                     <div class="demo-one__content">
@@ -159,7 +159,7 @@
                                         alt=""
                                       />
                                                                         <div class="demo-one__btns">
-                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>View Page</span>                                                                             </a><!-- /.thm-btn demo-one__btn -->
+                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>Ver documento</span>                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
                                                                     <div class="demo-one__content">
@@ -177,7 +177,7 @@
                                       />
                                                                         <div class="demo-one__btns">
                                                                             <a href="index-dark.html" class="drivschol-btn demo-one__btn">
-                                                                                <span>View Page</span>
+                                                                                <span>Ver documento</span>
                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
@@ -196,7 +196,7 @@
                                       />
                                                                         <div class="demo-one__btns">
                                                                             <a href="index-boxed.html" class="drivschol-btn demo-one__btn">
-                                                                                <span>View Page</span>
+                                                                                <span>Ver documento</span>
                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
@@ -216,7 +216,7 @@
                                       />
                                                                         <div class="demo-one__btns">
                                                                             <a href="index-rtl.html" class="drivschol-btn demo-one__btn">
-                                                                                <span>View Page</span>
+                                                                                <span>Ver documento</span>
                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
@@ -312,24 +312,24 @@
                     </nav><!-- /.main-header__nav -->
                     <div class="main-header__right main-header__right--two">
 
-                        <div class="info-item">
+                        <div class="info-item d-none">
                             <a href="tel:+8801775-338747" class="info-item__btn d-flex align-items-center">
                                 <div class="icon">
                                     <i class="icon-Call"></i>
                                 </div>
                                 <div class="content">
-                                    <span class="content__text">Call to Questions</span>
-                                    <h6 class="content__call">(303) 555-0105</h6>
+                                    <span class="content__text">Ligue para mais Info</span>
+                                    <h6 class="content__call">+244 922 223 010</h6>
                                 </div>
                             </a>
                         </div>
-                        <div class="info-item">
-                            <a href="#" class="search-toggler info-item__btn">
-                                <i class="icon-search"></i><span class="sr-only">Search</span>
+                        <div class="info-item d-none">
+                            <a href="#" class="search-toggler info-item__btn d-none">
+                                <i class="icon-search"></i><span class="sr-only">Pesquisar</span>
                             </a>
                         </div>
-                        <div class="info-item">
-                            <a href="cart.html" class="info-item__btn"><i class="icon-trolley-cart"></i></a>
+                        <div class="info-item d-none">
+                            <a href="cart.html" class="info-item__btn d-none"><i class="icon-trolley-cart"></i></a>
                         </div>
                         <div class="mobile-nav__btn mobile-nav__toggler">
                             <span></span>
@@ -366,7 +366,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="main-slider-three__content">
-                                        <div class="main-slider-three__image"><img src="assets/images/backgrounds/slider-3-shape-2.png" alt="drivschol"></div>
+                                        <div class="main-slider-three__image"><img src="assets/images/backgrounds/slider-3-shape-2.png" alt="Drivschol" class="d-none"></div>
                                         <!-- slider-layer -->
                                         <h2 class="main-slider-three__title">Experienced<br> Reliable Friendly<br> Driving
                                             School</h2><!-- slider-title -->
@@ -379,7 +379,7 @@
                             </div>
                         </div>
                         <div class="main-slider-three__thumb">
-                            <img src="assets/images/backgrounds/slider-3-1.jpg" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-3-1.jpg" alt="Drivschol" class="d-none">
                         </div>
                     </div>
                 </div>
@@ -392,7 +392,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="main-slider-three__content">
-                                        <div class="main-slider-three__image"><img src="assets/images/backgrounds/slider-3-shape-2.png" alt="drivschol"></div>
+                                        <div class="main-slider-three__image"><img src="assets/images/backgrounds/slider-3-shape-2.png" alt="Drivschol" class="d-none"></div>
                                         <!-- slider-layer -->
                                         <h2 class="main-slider-three__title">Experienced<br> Reliable Friendly<br> Driving
                                             School</h2><!-- slider-title -->
@@ -405,7 +405,7 @@
                             </div>
                         </div>
                         <div class="main-slider-three__thumb">
-                            <img src="assets/images/backgrounds/slider-3-2.jpg" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-3-2.jpg" alt="Drivschol" class="d-none">
                         </div>
                     </div>
                 </div>
@@ -418,7 +418,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="main-slider-three__content">
-                                        <div class="main-slider-three__image"><img src="assets/images/backgrounds/slider-3-shape-2.png" alt="drivschol"></div>
+                                        <div class="main-slider-three__image"><img src="assets/images/backgrounds/slider-3-shape-2.png" alt="Drivschol" class="d-none"></div>
                                         <!-- slider-layer -->
                                         <h2 class="main-slider-three__title">Experienced<br> Reliable Friendly<br> Driving
                                             School</h2><!-- slider-title -->
@@ -431,7 +431,7 @@
                             </div>
                         </div>
                         <div class="main-slider-three__thumb">
-                            <img src="assets/images/backgrounds/slider-3-3.jpg" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-3-3.jpg" alt="Drivschol" class="d-none">
                         </div>
                     </div>
                 </div>
@@ -448,13 +448,13 @@
 			"dots":false
 			}'>
                     <a href="#item1" class="item" data-hash="item1">
-                        <img src="assets/images/backgrounds/slider-3-1.jpg" alt="drivschol">
+                        <img src="assets/images/backgrounds/slider-3-1.jpg" alt="Drivschol" class="d-none">
                     </a>
                     <a href="#item2" class="item" data-hash="item2">
-                        <img src="assets/images/backgrounds/slider-3-2.jpg" alt="drivschol">
+                        <img src="assets/images/backgrounds/slider-3-2.jpg" alt="Drivschol" class="d-none">
                     </a>
                     <a href="#item3" class="item" data-hash="item3">
-                        <img src="assets/images/backgrounds/slider-3-3.jpg" alt="drivschol">
+                        <img src="assets/images/backgrounds/slider-3-3.jpg" alt="Drivschol" class="d-none">
                     </a>
                 </div>
             </div><!-- /slider-nav -->
@@ -1356,34 +1356,34 @@
             }
             }'>
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                 </div><!-- /.thm-owl__slider -->
             </div><!-- /.container -->
@@ -1601,11 +1601,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@drivschol.com">needhelp@drivschol.com</a>
+                     <a href="mailto:info@interclube.co.ao">info@interclube.co.ao</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:+244922223010">+244 922 223 010</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
