--- a/index-boxed.html
+++ b/index-boxed.html
@@ -262,27 +262,27 @@
                         </ul>
                     </nav><!-- /.main-header__nav -->
                     <div class="main-header__right">
-                        <div class="info-item">
+                        <div class="info-item d-none">
                             <a href="tel:+8801775-338747" class="info-item__btn d-flex align-items-center">
                                 <div class="icon">
                                     <i class="icon-Call"></i>
                                 </div>
                                 <div class="content">
-                                    <span class="content__text">Call to Questions</span>
-                                    <h6 class="content__call">(303) 555-0105</h6>
+                                    <span class="content__text">Ligue para mais Info</span>
+                                    <h6 class="content__call">+244 922 223 010</h6>
                                 </div>
                             </a>
                         </div>
-                        <div class="info-item">
-                            <a href="#" class="search-toggler info-item__btn">
-                                <i class="icon-search"></i><span class="sr-only">Search</span>
+                        <div class="info-item d-none">
+                            <a href="#" class="search-toggler info-item__btn d-none">
+                                <i class="icon-search"></i><span class="sr-only">Pesquisar</span>
                             </a>
                         </div>
-                        <div class="info-item">
-                            <a href="cart.html" class="info-item__btn"><i class="icon-trolley-cart"></i></a>
+                        <div class="info-item d-none">
+                            <a href="cart.html" class="info-item__btn d-none"><i class="icon-trolley-cart"></i></a>
                         </div>
-                        <div class="item-shape">
-                            <img src="assets/images/shapes/shape.svg" alt="Drivschol">
+                        <div class="item-shape d-none">
+                            <img src="assets/images/shapes/shape.svg" alt="Drivschol" class="d-none">
                         </div>
                     </div><!-- /.main-header__right -->
                     <div class="mobile-nav__btn mobile-nav__toggler">
@@ -316,10 +316,10 @@
                     <div class="main-slider-one__item">
                         <div class="main-slider-one__bg" style="background-image: url(assets/images/backgrounds/slider-1-1.png);"></div>
                         <div class="main-slider-one__shape-one">
-                            <img src="assets/images/backgrounds/slider-1-shape-1.png" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-1-shape-1.png" alt="Drivschol" class="d-none">
                         </div>
                         <div class="main-slider-one__shape-two">
-                            <img src="assets/images/backgrounds/slider-1-shape-2.png" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-1-shape-2.png" alt="Drivschol" class="d-none">
                         </div>
                         <div class="main-slider-one__shape-border">
                             <span class="main-slider-one__shape-border__one"></span>
@@ -328,18 +328,18 @@
                         <div class="container">
                             <div class="main-slider-one__content">
                                 <h2 class="main-slider-one__title">
-                                    <span class="main-slider-one__title__anim">Are You Looking</span>
-                                    <span class="main-slider-one__title__anim">for a Car for the</span>
-                                    <span class="main-slider-one__title__anim">Driving Test?</span>
-                                    <span class="main-slider-one__title__image"><img src="assets/images/backgrounds/slider-1-shape-3.png" alt="drivschol"></span>
+                                       <span class="main-slider-one__title__anim">A era do um novo</span>
+                                    <span class="main-slider-one__title__anim">campião unidos</span>
+                                    <span class="main-slider-one__title__anim">por um sonho</span>
+                                    <span class="main-slider-one__title__image d-none">.</span>
                                 </h2><!-- slider-title -->
                                 <div class="main-slider-one__btn">
-                                    <a href="services.html" class="drivschol-btn drivschol-btn--base"><span>Get Started</span></a>
+                                    <a href="services.html" class="drivschol-btn drivschol-btn--base"><span>Explorar</span></a>
                                 </div><!-- slider-btn -->
                             </div>
                         </div>
                         <div class="main-slider-one__layer">
-                            <img src="assets/images/backgrounds/slider-1-layer-1.png" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-1-layer-1.png" alt="Drivschol" class="d-none">
                         </div>
                     </div>
                 </div>
@@ -347,10 +347,10 @@
                     <div class="main-slider-one__item">
                         <div class="main-slider-one__bg" style="background-image: url(assets/images/backgrounds/slider-1-1.png);"></div>
                         <div class="main-slider-one__shape-one">
-                            <img src="assets/images/backgrounds/slider-1-shape-1.png" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-1-shape-1.png" alt="Drivschol" class="d-none">
                         </div>
                         <div class="main-slider-one__shape-two">
-                            <img src="assets/images/backgrounds/slider-1-shape-2.png" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-1-shape-2.png" alt="Drivschol" class="d-none">
                         </div>
                         <div class="main-slider-one__shape-border">
                             <span class="main-slider-one__shape-border__one"></span>
@@ -359,18 +359,18 @@
                         <div class="container">
                             <div class="main-slider-one__content">
                                 <h2 class="main-slider-one__title">
-                                    <span class="main-slider-one__title__anim">Are You Looking</span>
-                                    <span class="main-slider-one__title__anim">for a Car for the</span>
-                                    <span class="main-slider-one__title__anim">Driving Test?</span>
-                                    <span class="main-slider-one__title__image"><img src="assets/images/backgrounds/slider-1-shape-3.png" alt="drivschol"></span>
+                                       <span class="main-slider-one__title__anim">A era do campião</span>
+                                  <span class="main-slider-one__title__anim">campião unidos</span>
+                                    <span class="main-slider-one__title__anim">por um sonho</span>
+                                    <span class="main-slider-one__title__image d-none">.</span>
                                 </h2><!-- slider-title -->
                                 <div class="main-slider-one__btn">
-                                    <a href="services.html" class="drivschol-btn drivschol-btn--base"><span>Get Started</span></a>
+                                    <a href="services.html" class="drivschol-btn drivschol-btn--base"><span>Explorar</span></a>
                                 </div><!-- slider-btn -->
                             </div>
                         </div>
                         <div class="main-slider-one__layer">
-                            <img src="assets/images/backgrounds/slider-1-layer-1.png" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-1-layer-1.png" alt="Drivschol" class="d-none">
                         </div>
                     </div>
                 </div>
@@ -378,10 +378,10 @@
                     <div class="main-slider-one__item">
                         <div class="main-slider-one__bg" style="background-image: url(assets/images/backgrounds/slider-1-1.png);"></div>
                         <div class="main-slider-one__shape-one">
-                            <img src="assets/images/backgrounds/slider-1-shape-1.png" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-1-shape-1.png" alt="Drivschol" class="d-none">
                         </div>
                         <div class="main-slider-one__shape-two">
-                            <img src="assets/images/backgrounds/slider-1-shape-2.png" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-1-shape-2.png" alt="Drivschol" class="d-none">
                         </div>
                         <div class="main-slider-one__shape-border">
                             <span class="main-slider-one__shape-border__one"></span>
@@ -390,18 +390,18 @@
                         <div class="container">
                             <div class="main-slider-one__content">
                                 <h2 class="main-slider-one__title">
-                                    <span class="main-slider-one__title__anim">Are You Looking</span>
-                                    <span class="main-slider-one__title__anim">for a Car for the</span>
-                                    <span class="main-slider-one__title__anim">Driving Test?</span>
-                                    <span class="main-slider-one__title__image"><img src="assets/images/backgrounds/slider-1-shape-3.png" alt="drivschol"></span>
+                                       <span class="main-slider-one__title__anim">A era do campião</span>
+                                  <span class="main-slider-one__title__anim">campião unidos</span>
+                                    <span class="main-slider-one__title__anim">por um sonho</span>
+                                    <span class="main-slider-one__title__image d-none">.</span>
                                 </h2><!-- slider-title -->
                                 <div class="main-slider-one__btn">
-                                    <a href="services.html" class="drivschol-btn drivschol-btn--base"><span>Get Started</span></a>
+                                    <a href="services.html" class="drivschol-btn drivschol-btn--base"><span>Explorar</span></a>
                                 </div><!-- slider-btn -->
                             </div>
                         </div>
                         <div class="main-slider-one__layer">
-                            <img src="assets/images/backgrounds/slider-1-layer-1.png" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-1-layer-1.png" alt="Drivschol" class="d-none">
                         </div>
                     </div>
                 </div>
@@ -730,34 +730,34 @@
             }
             }'>
                                     <div class="client-carousel__one__item">
-                                        <img src="assets/images/resources/brand-1-1.png" alt="drivschol">
+                                        <img src="assets/images/resources/brand-1-1.png" alt="Drivschol" class="d-none">
                                     </div><!-- /.owl-slide-item-->
                                     <div class="client-carousel__one__item">
-                                        <img src="assets/images/resources/brand-1-1.png" alt="drivschol">
+                                        <img src="assets/images/resources/brand-1-1.png" alt="Drivschol" class="d-none">
                                     </div><!-- /.owl-slide-item-->
                                     <div class="client-carousel__one__item">
-                                        <img src="assets/images/resources/brand-1-1.png" alt="drivschol">
+                                        <img src="assets/images/resources/brand-1-1.png" alt="Drivschol" class="d-none">
                                     </div><!-- /.owl-slide-item-->
                                     <div class="client-carousel__one__item">
-                                        <img src="assets/images/resources/brand-1-1.png" alt="drivschol">
+                                        <img src="assets/images/resources/brand-1-1.png" alt="Drivschol" class="d-none">
                                     </div><!-- /.owl-slide-item-->
                                     <div class="client-carousel__one__item">
-                                        <img src="assets/images/resources/brand-1-1.png" alt="drivschol">
+                                        <img src="assets/images/resources/brand-1-1.png" alt="Drivschol" class="d-none">
                                     </div><!-- /.owl-slide-item-->
                                     <div class="client-carousel__one__item">
-                                        <img src="assets/images/resources/brand-1-1.png" alt="drivschol">
+                                        <img src="assets/images/resources/brand-1-1.png" alt="Drivschol" class="d-none">
                                     </div><!-- /.owl-slide-item-->
                                     <div class="client-carousel__one__item">
-                                        <img src="assets/images/resources/brand-1-1.png" alt="drivschol">
+                                        <img src="assets/images/resources/brand-1-1.png" alt="Drivschol" class="d-none">
                                     </div><!-- /.owl-slide-item-->
                                     <div class="client-carousel__one__item">
-                                        <img src="assets/images/resources/brand-1-1.png" alt="drivschol">
+                                        <img src="assets/images/resources/brand-1-1.png" alt="Drivschol" class="d-none">
                                     </div><!-- /.owl-slide-item-->
                                     <div class="client-carousel__one__item">
-                                        <img src="assets/images/resources/brand-1-1.png" alt="drivschol">
+                                        <img src="assets/images/resources/brand-1-1.png" alt="Drivschol" class="d-none">
                                     </div><!-- /.owl-slide-item-->
                                     <div class="client-carousel__one__item">
-                                        <img src="assets/images/resources/brand-1-1.png" alt="drivschol">
+                                        <img src="assets/images/resources/brand-1-1.png" alt="Drivschol" class="d-none">
                                     </div><!-- /.owl-slide-item-->
                                 </div><!-- /.thm-owl__slider -->
                             </div><!-- /.container -->
@@ -977,13 +977,13 @@
 					}
 					}'>
                             <a href="#item1" class="item" data-hash="item1">
-                                <span class="testimonials-two__meta-thumb"><img src="assets/images/resources/testi-1-4.jpg" alt="drivschol"></span>
+                                <span class="testimonials-two__meta-thumb"><img src="assets/images/resources/testi-1-4.jpg" alt="Drivschol" class="d-none"></span>
                             </a><!-- testimonial-author -->
                             <a href="#item2" class="item" data-hash="item2">
-                                <span class="testimonials-two__meta-thumb"><img src="assets/images/resources/testi-1-3.jpg" alt="drivschol"></span>
+                                <span class="testimonials-two__meta-thumb"><img src="assets/images/resources/testi-1-3.jpg" alt="Drivschol" class="d-none"></span>
                             </a><!-- testimonial-author -->
                             <a href="#item3" class="item" data-hash="item3">
-                                <span class="testimonials-two__meta-thumb"><img src="assets/images/resources/testi-1-6.jpg" alt="drivschol"></span>
+                                <span class="testimonials-two__meta-thumb"><img src="assets/images/resources/testi-1-6.jpg" alt="Drivschol" class="d-none"></span>
                             </a><!-- testimonial-author -->
                         </div>
                         <!-- Testimonial Thumb -->
@@ -1682,7 +1682,7 @@
                             <div class="cta-one__thumb">
                                 <div class="cta-one__thumb__one wow fadeInUp" data-wow-delay="300ms">
                                     <div class="cta-one__thumb__one__thumb">
-                                        <img src="assets/images/shapes/cta-car.png" alt="drivschol">
+                                        <img src="assets/images/shapes/cta-car.png" alt="Drivschol" class="d-none">
                                     </div>
                                 </div><!-- /.cta-thumb-one -->
                             </div>
@@ -1854,11 +1854,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@drivschol.com">needhelp@drivschol.com</a>
+                     <a href="mailto:info@interclube.co.ao">info@interclube.co.ao</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:+244922223010">+244 922 223 010</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
