--- a/team-carousel.html
+++ b/team-carousel.html
@@ -196,7 +196,7 @@
                                           href="index-rtl.html"
                                           class="drivschol-btn demo-one__btn"
                                         >
-                                          <span>View Page</span> </a
+                                          <span>Ver documento</span> </a
                                         ><!-- /.thm-btn demo-one__btn -->
                                       </div>
                                       <!-- /.demo-one__btns -->
@@ -225,7 +225,7 @@
                                           href="index-rtl.html"
                                           class="drivschol-btn demo-one__btn"
                                         >
-                                          <span>View Page</span>
+                                          <span>Ver documento</span>
                                         </a>
                                       </div>
                                     </div>
@@ -253,7 +253,7 @@
                                           href="index-rtl.html"
                                           class="drivschol-btn demo-one__btn"
                                         >
-                                          <span>View Page</span> </a
+                                          <span>Ver documento</span> </a
                                         ><!-- /.thm-btn demo-one__btn -->
                                       </div>
                                       <!-- /.demo-one__btns -->
@@ -283,7 +283,7 @@
                                           href="index-dark.html"
                                           class="drivschol-btn demo-one__btn"
                                         >
-                                          <span>View Page</span> </a
+                                          <span>Ver documento</span> </a
                                         ><!-- /.thm-btn demo-one__btn -->
                                       </div>
                                       <!-- /.demo-one__btns -->
@@ -313,7 +313,7 @@
                                           href="index-boxed.html"
                                           class="drivschol-btn demo-one__btn"
                                         >
-                                          <span>View Page</span> </a
+                                          <span>Ver documento</span> </a
                                         ><!-- /.thm-btn demo-one__btn -->
                                       </div>
                                       <!-- /.demo-one__btns -->
@@ -345,7 +345,7 @@
                                           href="index-rtl.html"
                                           class="drivschol-btn demo-one__btn"
                                         >
-                                          <span>View Page</span> </a
+                                          <span>Ver documento</span> </a
                                         ><!-- /.thm-btn demo-one__btn -->
                                       </div>
                                       <!-- /.demo-one__btns -->
@@ -378,8 +378,8 @@
 
                 <li><a href="about.html">Sobre</a></li>
                 <li class="dropdown">
-                  <a href="#">Modalidades</a>
-                  <ul class="sub-menu">
+                  <a href="team-carousel.html">Modalidades</a>
+                  <ul class="sub-menu d-none">
                     <li><a href="team.html">Instructor</a></li>
                     <li>
                       <a href="team-carousel.html">Instructor Carousel</a>
@@ -487,7 +487,7 @@
             </nav>
             <!-- /.main-header__nav -->
             <div class="main-header__right">
-              <div class="info-item">
+              <div class="info-item d-none">
                 <a
                   href="tel:+8801775-338747"
                   class="info-item__btn d-flex align-items-center"
@@ -496,23 +496,23 @@
                     <i class="icon-Call"></i>
                   </div>
                   <div class="content">
-                    <span class="content__text">Call to Questions</span>
-                    <h6 class="content__call">(303) 555-0105</h6>
+                    <span class="content__text">Ligue para mais Info</span>
+                    <h6 class="content__call">+244 922 223 010</h6>
                   </div>
                 </a>
               </div>
-              <div class="info-item">
-                <a href="#" class="search-toggler info-item__btn">
-                  <i class="icon-search"></i><span class="sr-only">Search</span>
+              <div class="info-item d-none">
+                <a href="#" class="search-toggler info-item__btn d-none">
+                  <i class="icon-search"></i><span class="sr-only">Pesquisar</span>
                 </a>
               </div>
-              <div class="info-item">
+              <div class="info-item d-none">
                 <a href="cart.html" class="info-item__btn"
                   ><i class="icon-trolley-cart"></i
                 ></a>
               </div>
-              <div class="item-shape">
-                <img src="assets/images/shapes/shape.svg" alt="Drivschol" />
+              <div class="item-shape d-none">
+                <img src="assets/images/shapes/shape.svg" alt="Drivschol" class="d-none" />
               </div>
             </div>
             <!-- /.main-header__right -->
@@ -1517,11 +1517,11 @@
         <ul class="mobile-nav__contact list-unstyled">
           <li>
             <i class="fa fa-envelope"></i>
-            <a href="mailto:needhelp@drivschol.com">needhelp@drivschol.com</a>
+             <a href="mailto:info@interclube.co.ao">info@interclube.co.ao</a>
           </li>
           <li>
             <i class="fa fa-phone-alt"></i>
-            <a href="tel:666-888-0000">666 888 0000</a>
+            <a href="tel:+244922223010">+244 922 223 010</a>
           </li>
         </ul>
         <!-- /.mobile-nav__contact -->
