--- a/gallery.html
+++ b/gallery.html
@@ -122,16 +122,14 @@
                                                             <div class="col-md-6 col-lg-4">
                                                                 <div class="demo-one__card">
                                                                     <div class="demo-one__image">
-                                                                       <img  src="assets/doc/img/rnlc.png"
-                                        alt=""
-                                      />
+                                                                       <img  src="assets/doc/img/rnlc.png"  alt="" />
                                                                         <div class="demo-one__btns">
-                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>View Page</span>                                                                             </a><!-- /.thm-btn demo-one__btn -->
+                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>Ver documento</span>                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
                                                                     <div class="demo-one__content">
                                                                         <h3 class="demo-one__title">
-                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>View Page</span>                                                                             </a>
+                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>Ver documento</span>                                                                             </a>
                                                                         </h3><!-- /.demo-one__title -->
                                                                     </div><!-- /.demo-one__content -->
                                                                 </div><!-- /.demo-one__card -->
@@ -144,7 +142,7 @@
                                         alt=""
                                       />
                                                                         <div class="demo-one__btns">
-                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>View Page</span>                                                                             </a>!-- /.thm-btn demo-one__btn -->
+                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>Ver documento</span>                                                                             </a>!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
                                                                     <div class="demo-one__content">
@@ -162,7 +160,7 @@
                                         alt=""
                                       />
                                                                         <div class="demo-one__btns">
-                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>View Page</span>                                                                             </a><!-- /.thm-btn demo-one__btn -->
+                                                                              <a href="index-rtl.html" class="drivschol-btn demo-one__btn">                                                                                 <span>Ver documento</span>                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
                                                                     <div class="demo-one__content">
@@ -180,7 +178,7 @@
                                       />
                                                                         <div class="demo-one__btns">
                                                                             <a href="index-dark.html" class="drivschol-btn demo-one__btn">
-                                                                                <span>View Page</span>
+                                                                                <span>Ver documento</span>
                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
@@ -199,7 +197,7 @@
                                       />
                                                                         <div class="demo-one__btns">
                                                                             <a href="index-boxed.html" class="drivschol-btn demo-one__btn">
-                                                                                <span>View Page</span>
+                                                                                <span>Ver documento</span>
                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
@@ -214,12 +212,10 @@
                                                             <div class="col-md-6 col-lg-4">
                                                                 <div class="demo-one__card">
                                                                     <div class="demo-one__image">
-                                                                        <img                                     src="assets/doc/img/estatuto.png"
-                                        alt=""
-                                      />
+                                                                        <img  src="assets/doc/img/estatuto.png" alt="" />
                                                                         <div class="demo-one__btns">
                                                                             <a href="index-rtl.html" class="drivschol-btn demo-one__btn">
-                                                                                <span>View Page</span>
+                                                                                <span>Ver documento</span>
                                                                             </a><!-- /.thm-btn demo-one__btn -->
                                                                         </div><!-- /.demo-one__btns -->
                                                                     </div><!-- /.demo-one__image -->
@@ -240,101 +236,30 @@
                                 </ul>
                             </li>
 
-
-                            <li> <a href="about.html">Sobre</a> </li>
-                            <li class="dropdown"><a href="#">Modalidades</a>
-                                <ul class="sub-menu">
-                                    <li><a href="team.html">Instructor</a>
-                                    <li><a href="team-carousel.html">Instructor Carousel</a></li>
-                                    <li><a href="team-details.html">Instructor Details</a></li>
-                                    <li><a href="pricing.html">Pricing</a></li>
-                                    <li><a href="pricing-carousel.html">Pricing Carousel</a></li>
-                                    <li><a href="gallery.html">Gallery</a> </li>
-                                    <li><a href="gallery-grid.html">Gallery Grid</a></li>
-                                    <li><a href="gallery-filter.html">Gallery filter</a></li>
-                                    <li><a href="gallery-carousel.html">Gallery Carousel</a></li>
-                                    <li><a href="faq.html">FAQs</a></li>
-                                    <li><a href="login.html">Login</a></li>
-                                    <li><a href="404.html">404 Error</a></li>
-                                </ul>
-                            </li>
-                         
-                            <li class="dropdown"><a href="#">Academia</a>
-                                <ul>
-                                    <li><a href="services-grid.html">Services</a></li>
-                                    <li><a href="services-carousel.html">Services Carousel</a></li>
-                                    <li><a href="service-d-safety.html">Safety Instruction</a></li>
-                                    <li><a href="service-d-driving.html">Road Safety Guide</a></li>
-                                    <li><a href="service-d-guideline.html">Road Guidelines</a></li>
-                                    <li><a href="service-d-insurance.html">Driver Insurance</a></li>
-                                    <li><a href="service-d-motorcycle.html">Motorcycle Training</a></li>
-                                    <li><a href="service-d-road.html">Driving License</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">   <a href="#">Loja</a>
-                                <ul class="sub-menu">
-                                    <li><a href="products.html">No sidebar</a></li>
-                                    <li><a href="products-carousel.html">Products carousel</a></li>
-                                    <li><a href="products-left.html">Left sidebar</a></li>
-                                    <li><a href="products-right.html">Right sidebar</a></li>
-                                    <li><a href="product-details.html">Product details</a></li>
-                                    <li><a href="cart.html">Cart</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown"><a href="#">Blog</a>
-                                <ul class="sub-menu">
-                                    <li class="dropdown"> <a href="#">Blog grid</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog-grid.html">No sidebar</a></li>
-                                            <li><a href="blog-grid-left.html">Left sidebar</a></li>
-                                            <li><a href="blog-grid-right.html">Right sidebar</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="blog-carousel.html">Blog carousel</a></li>
-                                    <li class="dropdown"> <a href="#">Blog list</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog-list.html">No sidebar</a></li>
-                                            <li><a href="blog-list-left.html">Left sidebar</a></li>
-                                            <li><a href="blog-list-right.html">Right sidebar</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="dropdown"> <a href="#">Blog details</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog-details.html">No sidebar</a></li>
-                                            <li><a href="blog-details-left.html">Left sidebar</a></li>
-                                            <li><a href="blog-details-right.html">Right sidebar</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="contact.html">Contacto</a>
-                            </li>
                         </ul>
                     </nav><!-- /.main-header__nav -->
                     <div class="main-header__right">
-                        <div class="info-item">
+                        <div class="info-item d-none">
                             <a href="tel:+8801775-338747" class="info-item__btn d-flex align-items-center">
                                 <div class="icon">
                                     <i class="icon-Call"></i>
                                 </div>
                                 <div class="content">
-                                    <span class="content__text">Call to Questions</span>
-                                    <h6 class="content__call">(303) 555-0105</h6>
+                                    <span class="content__text">Ligue para mais Info</span>
+                                    <h6 class="content__call">+244 922 223 010</h6>
                                 </div>
                             </a>
                         </div>
-                        <div class="info-item">
-                            <a href="#" class="search-toggler info-item__btn">
-                                <i class="icon-search"></i><span class="sr-only">Search</span>
+                        <div class="info-item d-none">
+                            <a href="#" class="search-toggler info-item__btn d-none">
+                                <i class="icon-search"></i><span class="sr-only">Pesquisar</span>
                             </a>
                         </div>
-                        <div class="info-item">
-                            <a href="cart.html" class="info-item__btn"><i class="icon-trolley-cart"></i></a>
+                        <div class="info-item d-none">
+                            <a href="cart.html" class="info-item__btn d-none"><i class="icon-trolley-cart"></i></a>
                         </div>
-                        <div class="item-shape">
-                            <img src="assets/images/shapes/shape.svg" alt="Drivschol">
+                        <div class="item-shape d-none">
+                            <img src="assets/images/shapes/shape.svg" alt="Drivschol" class="d-none">
                         </div>
                     </div><!-- /.main-header__right -->
                     <div class="mobile-nav__btn mobile-nav__toggler">
@@ -615,11 +540,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@drivschol.com">needhelp@drivschol.com</a>
+                     <a href="mailto:info@interclube.co.ao">info@interclube.co.ao</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:+244922223010">+244 922 223 010</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
