--- a/index-3-one-page.html
+++ b/index-3-one-page.html
@@ -191,24 +191,24 @@
                     </nav><!-- /.main-header__nav -->
                     <div class="main-header__right main-header__right--two">
 
-                        <div class="info-item">
+                        <div class="info-item d-none">
                             <a href="tel:+8801775-338747" class="info-item__btn d-flex align-items-center">
                                 <div class="icon">
                                     <i class="icon-Call"></i>
                                 </div>
                                 <div class="content">
-                                    <span class="content__text">Call to Questions</span>
-                                    <h6 class="content__call">(303) 555-0105</h6>
+                                    <span class="content__text">Ligue para mais Info</span>
+                                    <h6 class="content__call">+244 922 223 010</h6>
                                 </div>
                             </a>
                         </div>
-                        <div class="info-item">
-                            <a href="#" class="search-toggler info-item__btn">
-                                <i class="icon-search"></i><span class="sr-only">Search</span>
+                        <div class="info-item d-none">
+                            <a href="#" class="search-toggler info-item__btn d-none">
+                                <i class="icon-search"></i><span class="sr-only">Pesquisar</span>
                             </a>
                         </div>
-                        <div class="info-item">
-                            <a href="cart.html" class="info-item__btn"><i class="icon-trolley-cart"></i></a>
+                        <div class="info-item d-none">
+                            <a href="cart.html" class="info-item__btn d-none"><i class="icon-trolley-cart"></i></a>
                         </div>
                         <div class="mobile-nav__btn mobile-nav__toggler">
                             <span></span>
@@ -244,7 +244,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="main-slider-three__content">
-                                        <div class="main-slider-three__image"><img src="assets/images/backgrounds/slider-3-shape-2.png" alt="drivschol"></div><!-- slider-layer -->
+                                        <div class="main-slider-three__image"><img src="assets/images/backgrounds/slider-3-shape-2.png" alt="Drivschol" class="d-none"></div><!-- slider-layer -->
                                         <h2 class="main-slider-three__title">Experienced<br> Reliable Friendly<br> Driving School</h2><!-- slider-title -->
                                         <div class="main-slider-three__btn">
                                             <a href="services.html" class="drivschol-btn drivschol-btn--base"><span>Get Started Now</span></a><!-- slider-btn -->
@@ -254,7 +254,7 @@
                             </div>
                         </div>
                         <div class="main-slider-three__thumb">
-                            <img src="assets/images/backgrounds/slider-3-1.jpg" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-3-1.jpg" alt="Drivschol" class="d-none">
                         </div>
                     </div>
                 </div>
@@ -266,7 +266,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="main-slider-three__content">
-                                        <div class="main-slider-three__image"><img src="assets/images/backgrounds/slider-3-shape-2.png" alt="drivschol"></div><!-- slider-layer -->
+                                        <div class="main-slider-three__image"><img src="assets/images/backgrounds/slider-3-shape-2.png" alt="Drivschol" class="d-none"></div><!-- slider-layer -->
                                         <h2 class="main-slider-three__title">Experienced<br> Reliable Friendly<br> Driving School</h2><!-- slider-title -->
                                         <div class="main-slider-three__btn">
                                             <a href="services.html" class="drivschol-btn drivschol-btn--base"><span>Get Started Now</span></a><!-- slider-btn -->
@@ -276,7 +276,7 @@
                             </div>
                         </div>
                         <div class="main-slider-three__thumb">
-                            <img src="assets/images/backgrounds/slider-3-2.jpg" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-3-2.jpg" alt="Drivschol" class="d-none">
                         </div>
                     </div>
                 </div>
@@ -288,7 +288,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="main-slider-three__content">
-                                        <div class="main-slider-three__image"><img src="assets/images/backgrounds/slider-3-shape-2.png" alt="drivschol"></div><!-- slider-layer -->
+                                        <div class="main-slider-three__image"><img src="assets/images/backgrounds/slider-3-shape-2.png" alt="Drivschol" class="d-none"></div><!-- slider-layer -->
                                         <h2 class="main-slider-three__title">Experienced<br> Reliable Friendly<br> Driving School</h2><!-- slider-title -->
                                         <div class="main-slider-three__btn">
                                             <a href="services.html" class="drivschol-btn drivschol-btn--base"><span>Get Started Now</span></a><!-- slider-btn -->
@@ -298,7 +298,7 @@
                             </div>
                         </div>
                         <div class="main-slider-three__thumb">
-                            <img src="assets/images/backgrounds/slider-3-3.jpg" alt="drivschol">
+                            <img src="assets/images/backgrounds/slider-3-3.jpg" alt="Drivschol" class="d-none">
                         </div>
                     </div>
                 </div>
@@ -315,13 +315,13 @@
 			"dots":false
 			}'>
                     <a href="#item1" class="item" data-hash="item1">
-                        <img src="assets/images/backgrounds/slider-3-1.jpg" alt="drivschol">
+                        <img src="assets/images/backgrounds/slider-3-1.jpg" alt="Drivschol" class="d-none">
                     </a>
                     <a href="#item2" class="item" data-hash="item2">
-                        <img src="assets/images/backgrounds/slider-3-2.jpg" alt="drivschol">
+                        <img src="assets/images/backgrounds/slider-3-2.jpg" alt="Drivschol" class="d-none">
                     </a>
                     <a href="#item3" class="item" data-hash="item3">
-                        <img src="assets/images/backgrounds/slider-3-3.jpg" alt="drivschol">
+                        <img src="assets/images/backgrounds/slider-3-3.jpg" alt="Drivschol" class="d-none">
                     </a>
                 </div>
             </div><!-- /slider-nav -->
@@ -1168,34 +1168,34 @@
             }
             }'>
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
-                        <img src="assets/images/resources/brand-2-1.png" alt="drivschol">
+                        <img src="assets/images/resources/brand-2-1.png" alt="Drivschol" class="d-none">
                     </div><!-- /.owl-slide-item-->
                 </div><!-- /.thm-owl__slider -->
             </div><!-- /.container -->
@@ -1404,11 +1404,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@drivschol.com">needhelp@drivschol.com</a>
+                     <a href="mailto:info@interclube.co.ao">info@interclube.co.ao</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:+244922223010">+244 922 223 010</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
