--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
 
                 <li><a href="about.html">Sobre</a></li>
                 <li class="dropdown">
-                  <a href="#">Modalidades</a>
-                  <ul class="sub-menu">
+                  <a href="team-carousel.html">Modalidades</a>
+                  <ul class="sub-menu d-none">
                     <li><a href="team.html">Instructor</a></li>
                     <li>
                       <a href="team-carousel.html">Instructor Carousel</a>
@@ -288,7 +288,7 @@
             </nav>
             <!-- /.main-header__nav -->
             <div class="main-header__right">
-              <div class="info-item">
+              <div class="info-item d-none">
                 <a
                   href="tel:+8801775-338747"
                   class="info-item__btn d-flex align-items-center"
@@ -297,23 +297,23 @@
                     <i class="icon-Call"></i>
                   </div>
                   <div class="content">
-                    <span class="content__text">Call to Questions</span>
-                    <h6 class="content__call">(303) 555-0105</h6>
+                    <span class="content__text">Ligue para mais Info</span>
+                    <h6 class="content__call">+244 922 223 010</h6>
                   </div>
                 </a>
               </div>
-              <div class="info-item">
-                <a href="#" class="search-toggler info-item__btn">
-                  <i class="icon-search"></i><span class="sr-only">Search</span>
+              <div class="info-item d-none">
+                <a href="#" class="search-toggler info-item__btn d-none">
+                  <i class="icon-search"></i><span class="sr-only">Pesquisar</span>
                 </a>
               </div>
-              <div class="info-item">
+              <div class="info-item d-none">
                 <a href="cart.html" class="info-item__btn"
                   ><i class="icon-trolley-cart"></i
                 ></a>
               </div>
-              <div class="item-shape">
-                <img src="assets/images/shapes/shape.svg" alt="Drivschol" />
+              <div class="item-shape d-none">
+                <img src="assets/images/shapes/shape.svg" alt="Drivschol" class="d-none" />
               </div>
             </div>
             <!-- /.main-header__right -->
@@ -354,19 +354,19 @@
               <div
                 class="main-slider-one__bg"
                 style="
-                  background-image: url(assets/images/backgrounds/slider-1-1.png);
+                  background-image: url(assets/images/backgrounds/slider-3.png);
                 "
               ></div>
               <div class="main-slider-one__shape-one">
                 <img
-                  src="assets/images/backgrounds/slider-1-shape-1.png"
-                  alt="drivschol"
+                  src="assets/images/backgrounds/slide-1-1.png"
+                  alt="Drivschol" class="d-none"
                 />
               </div>
               <div class="main-slider-one__shape-two">
                 <img
-                  src="assets/images/backgrounds/slider-1-shape-2.png"
-                  alt="drivschol"
+                  src="assets/images/backgrounds/slide-1-1.png"
+                  alt="Drivschol" class="d-none"
                 />
               </div>
               <div class="main-slider-one__shape-border">
@@ -376,19 +376,15 @@
               <div class="container">
                 <div class="main-slider-one__content">
                   <h2 class="main-slider-one__title">
+                   <span class="main-slider-one__title__anim">A era de um novo</span>
+                   <span class="main-slider-one__title__anim">campiao unidos</span>
                     <span class="main-slider-one__title__anim"
-                      >Are You Looking</span
-                    >
-                    <span class="main-slider-one__title__anim"
-                      >for a Car for the</span
-                    >
-                    <span class="main-slider-one__title__anim"
-                      >Driving Test?</span
+                      >pelo mesmo sonho</span
                     >
                     <span class="main-slider-one__title__image"
                       ><img
-                        src="assets/images/backgrounds/slider-1-shape-3.png"
-                        alt="drivschol"
+                        src="assets/images/backgrounds/slide-1-1.png"
+                        alt="Drivschol" class="d-none"
                     /></span>
                   </h2>
                   <!-- slider-title -->
@@ -396,7 +392,7 @@
                     <a
                       href="services.html"
                       class="drivschol-btn drivschol-btn--base"
-                      ><span>Get Started</span></a
+                      ><span>Explorar</span></a
                     >
                   </div>
                   <!-- slider-btn -->
@@ -405,7 +401,7 @@
               <div class="main-slider-one__layer">
                 <img
                   src="assets/images/backgrounds/slider-1-layer-1.png"
-                  alt="drivschol"
+                  alt="Drivschol" class="d-none"
                 />
               </div>
             </div>
@@ -415,19 +411,19 @@
               <div
                 class="main-slider-one__bg"
                 style="
-                  background-image: url(assets/images/backgrounds/slider-1-1.png);
+                  background-image: url(assets/images/backgrounds/slide-1-1.png);
                 "
               ></div>
               <div class="main-slider-one__shape-one">
                 <img
                   src="assets/images/backgrounds/slider-1-shape-1.png"
-                  alt="drivschol"
+                  alt="Drivschol" class="d-none"
                 />
               </div>
               <div class="main-slider-one__shape-two">
                 <img
                   src="assets/images/backgrounds/slider-1-shape-2.png"
-                  alt="drivschol"
+                  alt="Drivschol" class="d-none"
                 />
               </div>
               <div class="main-slider-one__shape-border">
@@ -437,19 +433,15 @@
               <div class="container">
                 <div class="main-slider-one__content">
                   <h2 class="main-slider-one__title">
-                    <span class="main-slider-one__title__anim"
-                      >Are You Looking</span
-                    >
-                    <span class="main-slider-one__title__anim"
-                      >for a Car for the</span
-                    >
-                    <span class="main-slider-one__title__anim"
-                      >Driving Test?</span
+                   <span class="main-slider-one__title__anim fs-1">A era de um novo</span>
+                   <span class="main-slider-one__title__anim fs-1">campiao unidos</span>
+                    <span class="main-slider-one__title__anim fs-1"
+                      >pelo mesmo sonho</span
                     >
                     <span class="main-slider-one__title__image"
                       ><img
-                        src="assets/images/backgrounds/slider-1-shape-3.png"
-                        alt="drivschol"
+                        src="assets/images/backgrounds/slide-1-1.png"
+                        alt="Drivschol" class="d-none"
                     /></span>
                   </h2>
                   <!-- slider-title -->
@@ -457,7 +449,7 @@
                     <a
                       href="services.html"
                       class="drivschol-btn drivschol-btn--base"
-                      ><span>Get Started</span></a
+                      ><span>Explorar</span></a
                     >
                   </div>
                   <!-- slider-btn -->
@@ -466,7 +458,7 @@
               <div class="main-slider-one__layer">
                 <img
                   src="assets/images/backgrounds/slider-1-layer-2.png"
-                  alt="drivschol"
+                  alt="Drivschol" class="d-none"
                 />
               </div>
             </div>
@@ -476,19 +468,19 @@
               <div
                 class="main-slider-one__bg"
                 style="
-                  background-image: url(assets/images/backgrounds/slider-1-1.png);
+                  background-image: url(assets/images/backgrounds/slide-1-1.png);
                 "
               ></div>
               <div class="main-slider-one__shape-one">
                 <img
                   src="assets/images/backgrounds/slider-1-shape-1.png"
-                  alt="drivschol"
+                  alt="Drivschol" class="d-none"
                 />
               </div>
               <div class="main-slider-one__shape-two">
                 <img
                   src="assets/images/backgrounds/slider-1-shape-2.png"
-                  alt="drivschol"
+                  alt="Drivschol" class="d-none"
                 />
               </div>
               <div class="main-slider-one__shape-border">
@@ -498,19 +490,15 @@
               <div class="container">
                 <div class="main-slider-one__content">
                   <h2 class="main-slider-one__title">
-                    <span class="main-slider-one__title__anim"
-                      >Are You Looking</span
-                    >
-                    <span class="main-slider-one__title__anim"
-                      >for a Car for the</span
-                    >
-                    <span class="main-slider-one__title__anim"
-                      >Driving Test?</span
+                   <span class="main-slider-one__title__anim fs-1">A era de um novo</span>
+                   <span class="main-slider-one__title__anim fs-1">campiao unidos</span>
+                    <span class="main-slider-one__title__anim fs-1"
+                      >pelo mesmo sonho</span
                     >
                     <span class="main-slider-one__title__image"
                       ><img
-                        src="assets/images/backgrounds/slider-1-shape-3.png"
-                        alt="drivschol"
+                        src="assets/images/backgrounds/slide-1-1.png"
+                        alt="Drivschol" class="d-none"
                     /></span>
                   </h2>
                   <!-- slider-title -->
@@ -518,7 +506,7 @@
                     <a
                       href="services.html"
                       class="drivschol-btn drivschol-btn--base"
-                      ><span>Get Started</span></a
+                      ><span>Explorar</span></a
                     >
                   </div>
                   <!-- slider-btn -->
@@ -527,7 +515,7 @@
               <div class="main-slider-one__layer">
                 <img
                   src="assets/images/backgrounds/slider-1-layer-3.png"
-                  alt="drivschol"
+                  alt="Drivschol" class="d-none"
                 />
               </div>
             </div>
@@ -1152,70 +1140,70 @@
                     <div class="client-carousel__one__item">
                       <img
                         src="assets/images/resources/brand-1-1.png"
-                        alt="drivschol"
+                        alt="Drivschol" class="d-none"
                       />
                     </div>
                     <!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
                       <img
                         src="assets/images/resources/brand-1-1.png"
-                        alt="drivschol"
+                        alt="Drivschol" class="d-none"
                       />
                     </div>
                     <!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
                       <img
                         src="assets/images/resources/brand-1-1.png"
-                        alt="drivschol"
+                        alt="Drivschol" class="d-none"
                       />
                     </div>
                     <!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
                       <img
                         src="assets/images/resources/brand-1-1.png"
-                        alt="drivschol"
+                        alt="Drivschol" class="d-none"
                       />
                     </div>
                     <!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
                       <img
                         src="assets/images/resources/brand-1-1.png"
-                        alt="drivschol"
+                        alt="Drivschol" class="d-none"
                       />
                     </div>
                     <!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
                       <img
                         src="assets/images/resources/brand-1-1.png"
-                        alt="drivschol"
+                        alt="Drivschol" class="d-none"
                       />
                     </div>
                     <!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
                       <img
                         src="assets/images/resources/brand-1-1.png"
-                        alt="drivschol"
+                        alt="Drivschol" class="d-none"
                       />
                     </div>
                     <!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
                       <img
                         src="assets/images/resources/brand-1-1.png"
-                        alt="drivschol"
+                        alt="Drivschol" class="d-none"
                       />
                     </div>
                     <!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
                       <img
                         src="assets/images/resources/brand-1-1.png"
-                        alt="drivschol"
+                        alt="Drivschol" class="d-none"
                       />
                     </div>
                     <!-- /.owl-slide-item-->
                     <div class="client-carousel__one__item">
                       <img
                         src="assets/images/resources/brand-1-1.png"
-                        alt="drivschol"
+                        alt="Drivschol" class="d-none"
                       />
                     </div>
                     <!-- /.owl-slide-item-->
@@ -1632,21 +1620,21 @@
                   <span class="testimonials-two__meta-thumb"
                     ><img
                       src="assets/images/resources/testi-1-4.jpg"
-                      alt="drivschol"
+                      alt="Drivschol" class="d-none"
                   /></span> </a
                 ><!-- testimonial-author -->
                 <a href="#item2" class="item" data-hash="item2">
                   <span class="testimonials-two__meta-thumb"
                     ><img
                       src="assets/images/resources/testi-1-3.jpg"
-                      alt="drivschol"
+                      alt="Drivschol" class="d-none"
                   /></span> </a
                 ><!-- testimonial-author -->
                 <a href="#item3" class="item" data-hash="item3">
                   <span class="testimonials-two__meta-thumb"
                     ><img
                       src="assets/images/resources/testi-1-6.jpg"
-                      alt="drivschol"
+                      alt="Drivschol" class="d-none"
                   /></span> </a
                 ><!-- testimonial-author -->
               </div>
@@ -3105,7 +3093,7 @@
                     <div class="cta-one__thumb__one__thumb">
                       <img
                         src="assets/images/shapes/cta-car.png"
-                        alt="drivschol"
+                        alt="Drivschol" class="d-none"
                       />
                     </div>
                   </div>
@@ -3486,11 +3474,11 @@
         <ul class="mobile-nav__contact list-unstyled">
           <li>
             <i class="fa fa-envelope"></i>
-            <a href="mailto:needhelp@drivschol.com">needhelp@drivschol.com</a>
+             <a href="mailto:info@interclube.co.ao">info@interclube.co.ao</a>
           </li>
           <li>
             <i class="fa fa-phone-alt"></i>
-            <a href="tel:666-888-0000">666 888 0000</a>
+            <a href="tel:+244922223010">+244 922 223 010</a>
           </li>
         </ul>
         <!-- /.mobile-nav__contact -->
